rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_right_paren-3.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_right_paren), \"for (i = 0; i < 10; i++ ;\")"
snapshot_kind: text
---
[
    SyntaxError {
        kind: UnclosedToken(
            Token {
                kind: LeftParen,
                position: (
                    18446744073709551615,
                    18446744073709551615,
                ),
            },
        ),
        range: 0..0,
    },
]
