rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_right_paren.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_right_paren), \"called(me;\")"
snapshot_kind: text
---
[
    SyntaxError {
        kind: UnclosedToken(
            Token {
                kind: LeftParen,
                position: (
                    6,
                    7,
                ),
            },
        ),
        range: 0..0,
    },
]
