rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_semicolon_assignment.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_semicolon_assignment), \"a = 12\")"
snapshot_kind: text
---
[
    SyntaxError {
        kind: MissingSemicolon(
            Statement {
                start: Token {
                    kind: Ident(
                        Ident(
                            "a",
                        ),
                    ),
                    position: (
                        0,
                        1,
                    ),
                },
                end: Some(
                    Token {
                        kind: Literal(
                            Number(
                                12,
                            ),
                        ),
                        position: (
                            4,
                            6,
                        ),
                    },
                ),
                kind: Assign(
                    Equal,
                    AssignReturn,
                    Statement {
                        start: Token {
                            kind: Ident(
                                Ident(
                                    "a",
                                ),
                            ),
                            position: (
                                0,
                                1,
                            ),
                        },
                        end: Some(
                            Token {
                                kind: Ident(
                                    Ident(
                                        "a",
                                    ),
                                ),
                                position: (
                                    0,
                                    1,
                                ),
                            },
                        ),
                        kind: Variable,
                    },
                    Statement {
                        start: Token {
                            kind: Literal(
                                Number(
                                    12,
                                ),
                            ),
                            position: (
                                4,
                                6,
                            ),
                        },
                        end: None,
                        kind: Primitive,
                    },
                ),
            },
        ),
        range: 0..0,
    },
]
